@@ -4,6 +4,9 @@ $Id$
 
 ChangeLog
 
+2009-09-13
+	- UriResolver2: resolving HTML by redirecting to OntMd service
+	
 2009-09-12
 	Refactoring:
 	- new OntServlet as main entry point and as a preparation to start refactoring of UriResolver
